<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
		<relativePath/>
	</parent>
	<groupId>com.example</groupId>
	<artifactId>expensetracker</artifactId>
	<version>1.0</version>
	<name>Expense Tracker System</name>
	<description>The system allows the user to manage their expenses by various categories effectively.</description>
	<url/>
	<licenses><license><name>Apache License 2.0</name><url>https://www.apache.org/licenses/LICENSE-2.0</url><distribution>repo</distribution></license></licenses>
	<developers><developer/></developers>
	<scm><connection/><developerConnection/><tag/><url/></scm>
	<properties><java.version>26</java.version></properties>
	<dependencies>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-data-jpa</artifactId></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-security</artifactId></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-webmvc</artifactId></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-json</artifactId></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-validation</artifactId></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-mail</artifactId></dependency>
		<dependency><groupId>io.jsonwebtoken</groupId><artifactId>jjwt-api</artifactId><version>0.13.0</version></dependency>
		<dependency><groupId>io.jsonwebtoken</groupId><artifactId>jjwt-impl</artifactId><version>0.13.0</version><scope>runtime</scope></dependency>
		<dependency><groupId>io.jsonwebtoken</groupId><artifactId>jjwt-jackson</artifactId><version>0.13.0</version><scope>runtime</scope></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-cache</artifactId></dependency>
		<dependency><groupId>com.h2database</groupId><artifactId>h2</artifactId><scope>runtime</scope></dependency>
		<dependency><groupId>org.postgresql</groupId><artifactId>postgresql</artifactId><scope>runtime</scope></dependency>
		<dependency><groupId>org.xerial</groupId><artifactId>sqlite-jdbc</artifactId><version>3.53.4.0</version></dependency>
		<dependency><groupId>org.hibernate.orm</groupId><artifactId>hibernate-community-dialects</artifactId></dependency>
		<dependency><groupId>com.github.librepdf</groupId><artifactId>openpdf</artifactId><version>3.0.5</version></dependency>
		<dependency><groupId>org.apache.poi</groupId><artifactId>poi-ooxml</artifactId><version>5.5.1</version></dependency>
		<dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><optional>true</optional></dependency>
		<dependency><groupId>org.springdoc</groupId><artifactId>springdoc-openapi-starter-webmvc-ui</artifactId><version>3.1.0</version></dependency>
		<dependency><groupId>com.yubico</groupId><artifactId>webauthn-server-core</artifactId><version>2.9.0</version></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-test</artifactId><scope>test</scope></dependency>
		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-webmvc-test</artifactId><scope>test</scope></dependency>
		<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-test</artifactId><scope>test</scope></dependency>
		<dependency><groupId>io.cucumber</groupId><artifactId>cucumber-java</artifactId><version>7.34.7</version><scope>test</scope></dependency>
		<dependency><groupId>io.cucumber</groupId><artifactId>cucumber-spring</artifactId><version>7.34.7</version><scope>test</scope></dependency>
		<dependency><groupId>io.cucumber</groupId><artifactId>cucumber-junit-platform-engine</artifactId><version>7.34.7</version><scope>test</scope></dependency>
		<dependency><groupId>org.junit.platform</groupId><artifactId>junit-platform-suite</artifactId><scope>test</scope></dependency>
		<dependency><groupId>io.rest-assured</groupId><artifactId>rest-assured</artifactId><version>6.0.1</version><scope>test</scope><exclusions><exclusion><groupId>org.codehaus.groovy</groupId><artifactId>groovy</artifactId></exclusion><exclusion><groupId>org.codehaus.groovy</groupId><artifactId>groovy-xml</artifactId></exclusion><exclusion><groupId>org.codehaus.groovy</groupId><artifactId>groovy-json</artifactId></exclusion></exclusions></dependency>
		<dependency><groupId>org.apache.groovy</groupId><artifactId>groovy</artifactId><version>5.0.8</version><scope>test</scope></dependency>
		<dependency><groupId>org.apache.groovy</groupId><artifactId>groovy-json</artifactId><version>5.0.8</version><scope>test</scope></dependency>
		<dependency><groupId>org.seleniumhq.selenium</groupId><artifactId>selenium-java</artifactId><version>4.48.0</version><scope>test</scope></dependency>
		<dependency><groupId>org.seleniumhq.selenium</groupId><artifactId>htmlunit3-driver</artifactId><version>4.48.0</version><scope>test</scope></dependency>
		<dependency><groupId>io.github.bonigarcia</groupId><artifactId>webdrivermanager</artifactId><version>6.3.4</version><scope>test</scope></dependency>
		<dependency><groupId>com.microsoft.playwright</groupId><artifactId>playwright</artifactId><version>1.51.0</version><scope>test</scope></dependency>
	</dependencies>
	<build><plugins>
		<plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.16.0</version><configuration><annotationProcessorPaths><path><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId></path></annotationProcessorPaths></configuration></plugin>
		<plugin><groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId><configuration><excludes><exclude><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId></exclude></excludes></configuration></plugin>
		<plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>3.6.0</version><configuration><includes><include>**/*Test.java</include><include>**/*Tests.java</include><include>**/CucumberTestRunner.java</include></includes><argLine>-XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8</argLine></configuration></plugin>
	</plugins></build>
</project>
